--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "morgan": "^1.8.2",
     "mysql": "^2.13.0",
     "mysql2": "^1.3.6",
+    "query-string": "^4.3.4",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.1",
